vlib/v/checker/tests/enum_field_name_duplicate_err.vv
enum Color {
    green
    yellow
    blue
	green
}

fn main(){
	println('hello')
}
